minor fix: add instruction for image cropping

--- a/src/features/UploadImage/styles/uploadImage.module.css
+++ b/src/features/UploadImage/styles/uploadImage.module.css
@@ -1,5 +1,6 @@
 .canvasContainer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
